create upload knowleadge file multi tenant
